@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -12,11 +12,15 @@
  */
 package org.openhab.core.addon.marketplace.internal.json;
 
+import static org.openhab.core.addon.marketplace.MarketplaceConstants.*;
+
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.Reader;
 import java.lang.reflect.Type;
+import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.Arrays;
@@ -25,15 +29,16 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
 import org.openhab.core.addon.Addon;
+import org.openhab.core.addon.AddonInfoRegistry;
 import org.openhab.core.addon.AddonService;
 import org.openhab.core.addon.marketplace.AbstractRemoteAddonService;
 import org.openhab.core.addon.marketplace.MarketplaceAddonHandler;
 import org.openhab.core.addon.marketplace.internal.json.model.AddonEntryDTO;
+import org.openhab.core.config.core.ConfigParser;
 import org.openhab.core.config.core.ConfigurableService;
 import org.openhab.core.events.EventPublisher;
 import org.openhab.core.storage.StorageService;
@@ -78,20 +83,34 @@ public class JsonAddonService extends AbstractRemoteAddonService {
 
     @Activate
     public JsonAddonService(@Reference EventPublisher eventPublisher, @Reference StorageService storageService,
-            @Reference ConfigurationAdmin configurationAdmin, Map<String, Object> config) {
-        super(eventPublisher, configurationAdmin, storageService, SERVICE_PID);
+            @Reference ConfigurationAdmin configurationAdmin, @Reference AddonInfoRegistry addonInfoRegistry,
+            Map<String, Object> config) {
+        super(eventPublisher, configurationAdmin, storageService, addonInfoRegistry, SERVICE_PID);
         modified(config);
     }
 
     @Modified
     public void modified(@Nullable Map<String, Object> config) {
         if (config != null) {
-            String urls = Objects.requireNonNullElse((String) config.get(CONFIG_URLS), "");
-            addonServiceUrls = Arrays.asList(urls.split("\\|"));
-            showUnstable = (Boolean) config.getOrDefault(CONFIG_SHOW_UNSTABLE, false);
+            String urls = ConfigParser.valueAsOrElse(config.get(CONFIG_URLS), String.class, "");
+            addonServiceUrls = Arrays.asList(urls.split("\\|")).stream().filter(this::isValidUrl).toList();
+            showUnstable = ConfigParser.valueAsOrElse(config.get(CONFIG_SHOW_UNSTABLE), Boolean.class, false);
             cachedRemoteAddons.invalidateValue();
             refreshSource();
         }
+    }
+
+    private boolean isValidUrl(String urlString) {
+        if (urlString.isBlank()) {
+            return false;
+        }
+        try {
+            (new URI(urlString)).toURL();
+        } catch (IllegalArgumentException | URISyntaxException | MalformedURLException e) {
+            logger.warn("JSON Addon Service invalid URL: {}", urlString);
+            return false;
+        }
+        return true;
     }
 
     @Override
@@ -120,7 +139,7 @@ public class JsonAddonService extends AbstractRemoteAddonService {
     protected List<Addon> getRemoteAddons() {
         return addonServiceUrls.stream().map(urlString -> {
             try {
-                URL url = new URL(urlString);
+                URL url = URI.create(urlString).toURL();
                 URLConnection connection = url.openConnection();
                 connection.addRequestProperty("Accept", "application/json");
                 try (Reader reader = new InputStreamReader(connection.getInputStream())) {
@@ -130,9 +149,26 @@ public class JsonAddonService extends AbstractRemoteAddonService {
             } catch (IOException e) {
                 return List.of();
             }
-        }).flatMap(List::stream).filter(Objects::nonNull).map(e -> (AddonEntryDTO) e)
-                .filter(e -> showUnstable || "stable".equals(e.maturity)).map(this::fromAddonEntry)
-                .collect(Collectors.toList());
+        }).flatMap(List::stream).filter(Objects::nonNull).map(e -> (AddonEntryDTO) e).filter(this::showAddon)
+                .map(this::fromAddonEntry).toList();
+    }
+
+    /**
+     * Check if the addon UID is present and the entry is either stable or unstable add-ons are requested
+     *
+     * @param addonEntry the add-on entry to check
+     * @return {@code true} if the add-on entry should be processed, {@code false otherwise}
+     */
+    private boolean showAddon(AddonEntryDTO addonEntry) {
+        if (addonEntry.uid.isBlank()) {
+            logger.debug("Skipping {} because the UID is not set", addonEntry);
+            return false;
+        }
+        if (!showUnstable && !"stable".equals(addonEntry.maturity)) {
+            logger.debug("Skipping {} because the the add-on is not stable and showUnstable is disabled.", addonEntry);
+            return false;
+        }
+        return true;
     }
 
     @Override
@@ -153,13 +189,13 @@ public class JsonAddonService extends AbstractRemoteAddonService {
 
         Map<String, Object> properties = new HashMap<>();
         if (addonEntry.url.endsWith(".jar")) {
-            properties.put("jar_download_url", addonEntry.url);
+            properties.put(JAR_DOWNLOAD_URL_PROPERTY, addonEntry.url);
         } else if (addonEntry.url.endsWith(".kar")) {
-            properties.put("kar_download_url", addonEntry.url);
+            properties.put(KAR_DOWNLOAD_URL_PROPERTY, addonEntry.url);
         } else if (addonEntry.url.endsWith(".json")) {
-            properties.put("json_download_url", addonEntry.url);
+            properties.put(JSON_DOWNLOAD_URL_PROPERTY, addonEntry.url);
         } else if (addonEntry.url.endsWith(".yaml")) {
-            properties.put("yaml_download_url", addonEntry.url);
+            properties.put(YAML_DOWNLOAD_URL_PROPERTY, addonEntry.url);
         }
 
         boolean compatible = true;
@@ -175,6 +211,6 @@ public class JsonAddonService extends AbstractRemoteAddonService {
                 .withCompatible(compatible).withMaturity(addonEntry.maturity).withProperties(properties)
                 .withLink(addonEntry.link).withImageLink(addonEntry.imageUrl)
                 .withConfigDescriptionURI(addonEntry.configDescriptionURI).withLoggerPackages(addonEntry.loggerPackages)
-                .build();
+                .withConnection(addonEntry.connection).withCountries(addonEntry.countries).build();
     }
 }
