@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -12,7 +12,6 @@
  */
 package org.openhab.core.io.console.internal.extension;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -65,7 +64,7 @@ public class MetadataConsoleCommandExtension extends AbstractConsoleCommandExten
 
     @Override
     public List<String> getUsages() {
-        return Arrays.asList( //
+        return List.of( //
                 buildCommandUsage(SUBCMD_LIST + " [<itemName> [<namespace>]]",
                         "lists all available metadata, can be filtered for a specifc item and namespace"),
                 buildCommandUsage(SUBCMD_LIST_INTERNAL + " [<itemName> [<namespace>]]",
