@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -12,12 +12,13 @@
  */
 package org.openhab.core.model.script.actions;
 
+import java.time.ZonedDateTime;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
-import java.util.stream.Collectors;
 
+import org.eclipse.jdt.annotation.Nullable;
 import org.openhab.core.events.EventPublisher;
 import org.openhab.core.items.GroupItem;
 import org.openhab.core.items.Item;
@@ -27,6 +28,7 @@ import org.openhab.core.items.events.ItemEventFactory;
 import org.openhab.core.model.script.ScriptServiceUtil;
 import org.openhab.core.types.Command;
 import org.openhab.core.types.State;
+import org.openhab.core.types.TimeSeries;
 import org.openhab.core.types.TypeParser;
 import org.slf4j.LoggerFactory;
 
@@ -98,7 +100,7 @@ public class BusEvent {
     }
 
     private static <T extends State> List<String> getAcceptedCommandNames(Item item) {
-        return item.getAcceptedCommandTypes().stream().map(t -> t.getSimpleName()).collect(Collectors.toList());
+        return item.getAcceptedCommandTypes().stream().map(Class::getSimpleName).toList();
     }
 
     /**
@@ -147,7 +149,7 @@ public class BusEvent {
      * Posts a status update for a specified item to the event bus.
      *
      * @param itemName the name of the item to send the status update for
-     * @param stateAsString the new state of the item
+     * @param stateString the new state of the item
      */
     public static Object postUpdate(String itemName, String stateString) {
         ItemRegistry registry = ScriptServiceUtil.getItemRegistry();
@@ -170,8 +172,45 @@ public class BusEvent {
         return null;
     }
 
+    /**
+     * Sends a time series to the event bus
+     *
+     * @param item the item to send the time series for
+     * @param timeSeries a {@link TimeSeries} containing policy and values
+     */
+    public static Object sendTimeSeries(@Nullable Item item, @Nullable TimeSeries timeSeries) {
+        EventPublisher eventPublisher1 = ScriptServiceUtil.getEventPublisher();
+        if (eventPublisher1 != null && item != null && timeSeries != null) {
+            eventPublisher1.post(ItemEventFactory.createTimeSeriesEvent(item.getName(), timeSeries, null));
+        }
+        return null;
+    }
+
+    /**
+     * Sends a time series to the event bus
+     *
+     * @param itemName the name of the item to send the status update for
+     * @param values a {@link Map} containing the timeseries, composed of pairs of {@link ZonedDateTime} and
+     *            {@link State}
+     * @param policy either <code>ADD</code> or <code>REPLACE</code>
+     */
+    public static Object sendTimeSeries(@Nullable String itemName, @Nullable Map<ZonedDateTime, State> values,
+            String policy) {
+        EventPublisher eventPublisher1 = ScriptServiceUtil.getEventPublisher();
+        if (eventPublisher1 != null && itemName != null && values != null && policy != null) {
+            try {
+                TimeSeries timeSeries = new TimeSeries(TimeSeries.Policy.valueOf(policy));
+                values.forEach((key, value) -> timeSeries.add(key.toInstant(), value));
+                eventPublisher1.post(ItemEventFactory.createTimeSeriesEvent(itemName, timeSeries, null));
+            } catch (IllegalArgumentException e) {
+                LoggerFactory.getLogger(BusEvent.class).warn("Policy '{}' does not exist.", policy);
+            }
+        }
+        return null;
+    }
+
     private static <T extends State> List<String> getAcceptedDataTypeNames(Item item) {
-        return item.getAcceptedDataTypes().stream().map(t -> t.getSimpleName()).collect(Collectors.toList());
+        return item.getAcceptedDataTypes().stream().map(Class::getSimpleName).toList();
     }
 
     /**
@@ -233,6 +272,4 @@ public class BusEvent {
         }
         return null;
     }
-
-    // static public JobKey timer(AbstractInstant instant, Object)
 }
