@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -323,11 +323,11 @@ public class Voice {
         }
         if (locale != null) {
             String[] split = locale.split("-");
-            Locale loc = null;
+            Locale loc;
             if (split.length == 2) {
-                loc = new Locale(split[0], split[1]);
+                loc = Locale.of(split[0], split[1]);
             } else {
-                loc = new Locale(split[0]);
+                loc = Locale.of(split[0]);
             }
             dialogContextBuilder.withLocale(loc);
         }
@@ -450,12 +450,12 @@ public class Voice {
                 dialogContextBuilder.withListeningItem(listeningItem);
             }
             if (locale != null) {
-                Locale loc = null;
+                Locale loc;
                 String[] split = locale.split("-");
                 if (split.length == 2) {
-                    loc = new Locale(split[0], split[1]);
+                    loc = Locale.of(split[0], split[1]);
                 } else {
-                    loc = new Locale(split[0]);
+                    loc = Locale.of(split[0]);
                 }
                 dialogContextBuilder.withLocale(loc);
             }
