@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -19,7 +19,6 @@ import java.math.BigInteger;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -62,8 +61,8 @@ public class MetadataStateDescriptionFragmentProvider implements StateDescriptio
         this.metadataRegistry = metadataRegistry;
 
         Object serviceRanking = properties.get(Constants.SERVICE_RANKING);
-        if (serviceRanking instanceof Integer) {
-            rank = (Integer) serviceRanking;
+        if (serviceRanking instanceof Integer rankValue) {
+            rank = rankValue;
         } else {
             rank = 1; // takes precedence over other providers usually ranked 0
         }
@@ -102,16 +101,15 @@ public class MetadataStateDescriptionFragmentProvider implements StateDescriptio
                     builder.withReadOnly(getBoolean(readOnly));
                 }
 
-                if (metadata.getConfiguration().containsKey("options")) {
-                    List<StateOption> stateOptions = Stream
-                            .of(metadata.getConfiguration().get("options").toString().split(",")).map(o -> {
-                                if (o.contains("=")) {
-                                    var pair = parseValueLabelPair(o.trim());
-                                    return new StateOption(pair[0], pair[1]);
-                                } else {
-                                    return new StateOption(o.trim(), null);
-                                }
-                            }).collect(Collectors.toList());
+                if (metadata.getConfiguration().get("options") instanceof Object options) {
+                    List<StateOption> stateOptions = Stream.of(options.toString().split(",")).map(o -> {
+                        if (o.contains("=")) {
+                            var pair = parseValueLabelPair(o.trim());
+                            return new StateOption(pair[0], pair[1]);
+                        } else {
+                            return new StateOption(o.trim(), null);
+                        }
+                    }).toList();
                     builder.withOptions(stateOptions);
                 }
 
@@ -126,34 +124,30 @@ public class MetadataStateDescriptionFragmentProvider implements StateDescriptio
 
     private BigDecimal getBigDecimal(Object value) {
         BigDecimal ret = null;
-        if (value != null) {
-            if (value instanceof BigDecimal decimal) {
-                ret = decimal;
-            } else if (value instanceof String string) {
-                ret = new BigDecimal(string);
-            } else if (value instanceof BigInteger integer) {
-                ret = new BigDecimal(integer);
-            } else if (value instanceof Number number) {
-                ret = new BigDecimal(number.doubleValue());
-            } else {
-                throw new ClassCastException("Not possible to coerce [" + value + "] from class " + value.getClass()
-                        + " into a BigDecimal.");
-            }
+        if (value instanceof BigDecimal decimal) {
+            ret = decimal;
+        } else if (value instanceof String string) {
+            ret = new BigDecimal(string);
+        } else if (value instanceof BigInteger integer) {
+            ret = new BigDecimal(integer);
+        } else if (value instanceof Number number) {
+            ret = new BigDecimal(number.doubleValue());
+        } else {
+            throw new ClassCastException(
+                    "Not possible to coerce [" + value + "] from class " + value.getClass() + " into a BigDecimal.");
         }
         return ret;
     }
 
     private Boolean getBoolean(Object value) {
         Boolean ret = null;
-        if (value != null) {
-            if (value instanceof Boolean boolean1) {
-                ret = boolean1;
-            } else if (value instanceof String string) {
-                ret = Boolean.parseBoolean(string);
-            } else {
-                throw new ClassCastException(
-                        "Not possible to coerce [" + value + "] from class " + value.getClass() + " into a Boolean.");
-            }
+        if (value instanceof Boolean boolean1) {
+            ret = boolean1;
+        } else if (value instanceof String string) {
+            ret = Boolean.parseBoolean(string);
+        } else {
+            throw new ClassCastException(
+                    "Not possible to coerce [" + value + "] from class " + value.getClass() + " into a Boolean.");
         }
         return ret;
     }
