@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -16,7 +16,6 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
-import java.util.Collections;
 import java.util.List;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -60,7 +59,7 @@ public class ItemBuilderTest {
         verify(factoryMock).createItem(eq(CoreItemFactory.STRING), eq("test"));
         verify(itemMock).setLabel(isNull());
         verify(itemMock).setCategory(isNull());
-        verify(itemMock).addGroupNames(eq(Collections.emptyList()));
+        verify(itemMock).addGroupNames(eq(List.of()));
     }
 
     @Test
@@ -71,7 +70,7 @@ public class ItemBuilderTest {
         GroupItem res = (GroupItem) resItem;
         verifyNoMoreInteractions(factoryMock);
         assertNull(res.getCategory());
-        assertEquals(Collections.emptyList(), res.getGroupNames());
+        assertEquals(List.of(), res.getGroupNames());
         assertNull(res.getLabel());
         assertNull(res.getFunction());
         assertNull(res.getBaseItem());
