@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -57,7 +57,7 @@ public class EnrichedItemDTOMapperWithTransformOSGiTest extends JavaOSGiTest {
         item1.setState(new DecimalType("12.34"));
         item1.setStateDescriptionService(stateDescriptionServiceMock);
 
-        EnrichedItemDTO enrichedDTO = EnrichedItemDTOMapper.map(item1, false, null, null, null);
+        EnrichedItemDTO enrichedDTO = EnrichedItemDTOMapper.map(item1, false, null, null, null, null);
         assertThat(enrichedDTO, is(notNullValue()));
         assertThat(enrichedDTO.name, is("Item1"));
         assertThat(enrichedDTO.state, is("12.34"));
@@ -67,7 +67,7 @@ public class EnrichedItemDTOMapperWithTransformOSGiTest extends JavaOSGiTest {
         assertThat(sd.getMaximum(), is(BigDecimal.valueOf(100)));
         assertThat(sd.getStep(), is(BigDecimal.valueOf(10)));
         assertThat(sd.getPattern(), is("%d °C"));
-        assertThat(sd.getOptions().get(0).getValue(), is("SOUND"));
-        assertThat(sd.getOptions().get(0).getLabel(), is("My great sound."));
+        assertThat(sd.getOptions().getFirst().getValue(), is("SOUND"));
+        assertThat(sd.getOptions().getFirst().getLabel(), is("My great sound."));
     }
 }
