@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -19,11 +19,9 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.when;
 import static org.openhab.core.library.unit.Units.ONE;
 
-import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import javax.measure.Quantity;
 import javax.measure.quantity.Dimensionless;
@@ -109,9 +107,7 @@ public class GroupItemOSGiTest extends JavaOSGiTest {
 
             @Override
             public Set<String> getSubscribedEventTypes() {
-                Set<String> hs = new HashSet<>();
-                hs.add(ItemUpdatedEvent.TYPE);
-                return hs;
+                return Set.of(ItemUpdatedEvent.TYPE);
             }
         });
 
@@ -137,11 +133,10 @@ public class GroupItemOSGiTest extends JavaOSGiTest {
         itemRegistry.update(updatedItem);
         waitForAssert(() -> assertThat(events.size(), is(1)));
 
-        List<Event> stateChanges = events.stream().filter(ItemUpdatedEvent.class::isInstance)
-                .collect(Collectors.toList());
+        List<Event> stateChanges = events.stream().filter(ItemUpdatedEvent.class::isInstance).toList();
         assertThat(stateChanges.size(), is(1));
 
-        ItemUpdatedEvent change = (ItemUpdatedEvent) stateChanges.get(0);
+        ItemUpdatedEvent change = (ItemUpdatedEvent) stateChanges.getFirst();
 
         assertThat(change.getItem().label, is("secondLabel"));
     }
@@ -442,22 +437,20 @@ public class GroupItemOSGiTest extends JavaOSGiTest {
 
         waitForAssert(() -> assertThat(events.size(), is(2)));
 
-        List<Event> updates = events.stream().filter(GroupStateUpdatedEvent.class::isInstance)
-                .collect(Collectors.toList());
+        List<Event> updates = events.stream().filter(GroupStateUpdatedEvent.class::isInstance).toList();
         assertThat(updates.size(), is(1));
 
-        GroupStateUpdatedEvent update = (GroupStateUpdatedEvent) updates.get(0);
+        GroupStateUpdatedEvent update = (GroupStateUpdatedEvent) updates.getFirst();
         assertThat(update.getItemName(), is(groupItem.getName()));
         assertThat(update.getMemberName(), is(member.getName()));
         assertThat(update.getTopic(), is(groupitemStateUpdatedEventTopic.replace("{memberName}", member.getName())
                 .replace("{itemName}", groupItem.getName())));
         assertThat(update.getItemState(), is(groupItem.getState()));
 
-        List<Event> changes = events.stream().filter(GroupItemStateChangedEvent.class::isInstance)
-                .collect(Collectors.toList());
+        List<Event> changes = events.stream().filter(GroupItemStateChangedEvent.class::isInstance).toList();
         assertThat(changes.size(), is(1));
 
-        GroupItemStateChangedEvent change = (GroupItemStateChangedEvent) changes.get(0);
+        GroupItemStateChangedEvent change = (GroupItemStateChangedEvent) changes.getFirst();
         assertThat(change.getItemName(), is(groupItem.getName()));
         assertThat(change.getMemberName(), is(member.getName()));
         assertThat(change.getTopic(), is(groupitemStateChangedEventTopic.replace("{memberName}", member.getName())
@@ -470,7 +463,7 @@ public class GroupItemOSGiTest extends JavaOSGiTest {
         // State doesn't change -> only update event is posted
         member.setState(member.getState());
         waitForAssert(() -> assertThat(events.size(), is(1)));
-        assertThat(events.get(0), is(instanceOf(ItemStateUpdatedEvent.class)));
+        assertThat(events.getFirst(), is(instanceOf(ItemStateUpdatedEvent.class)));
     }
 
     @Test
@@ -493,10 +486,10 @@ public class GroupItemOSGiTest extends JavaOSGiTest {
         waitForAssert(() -> assertThat(events, hasSize(2)));
 
         List<Event> groupItemStateChangedEvents = events.stream().filter(GroupItemStateChangedEvent.class::isInstance)
-                .collect(Collectors.toList());
+                .toList();
         assertThat(groupItemStateChangedEvents, hasSize(1));
 
-        GroupItemStateChangedEvent change = (GroupItemStateChangedEvent) groupItemStateChangedEvents.get(0);
+        GroupItemStateChangedEvent change = (GroupItemStateChangedEvent) groupItemStateChangedEvents.getFirst();
         assertThat(change.getItemName(), is(groupItem.getName()));
 
         // we expect that the group should now have status "ON"
@@ -535,12 +528,11 @@ public class GroupItemOSGiTest extends JavaOSGiTest {
 
         waitForAssert(() -> assertThat(events, hasSize(2)));
 
-        List<Event> itemCommandEvents = events.stream().filter(ItemCommandEvent.class::isInstance)
-                .collect(Collectors.toList());
+        List<Event> itemCommandEvents = events.stream().filter(ItemCommandEvent.class::isInstance).toList();
         assertThat(itemCommandEvents, hasSize(2));
 
         List<Event> groupItemStateChangedEvents = events.stream().filter(GroupItemStateChangedEvent.class::isInstance)
-                .collect(Collectors.toList());
+                .toList();
         assertThat(groupItemStateChangedEvents, hasSize(0));
 
         assertThat(groupItem.getState(), is(UnDefType.NULL));
@@ -565,15 +557,13 @@ public class GroupItemOSGiTest extends JavaOSGiTest {
 
         waitForAssert(() -> assertThat(events, hasSize(2)));
 
-        List<Event> changes = events.stream().filter(GroupItemStateChangedEvent.class::isInstance)
-                .collect(Collectors.toList());
+        List<Event> changes = events.stream().filter(GroupItemStateChangedEvent.class::isInstance).toList();
         assertThat(changes, hasSize(1));
 
-        List<Event> updates = events.stream().filter(GroupStateUpdatedEvent.class::isInstance)
-                .collect(Collectors.toList());
+        List<Event> updates = events.stream().filter(GroupStateUpdatedEvent.class::isInstance).toList();
         assertThat(updates, hasSize(1));
 
-        GroupItemStateChangedEvent change = (GroupItemStateChangedEvent) changes.get(0);
+        GroupItemStateChangedEvent change = (GroupItemStateChangedEvent) changes.getFirst();
         assertThat(change.getItemName(), is(groupItem.getName()));
 
         // we expect that the group should now have status "ON"
@@ -594,10 +584,10 @@ public class GroupItemOSGiTest extends JavaOSGiTest {
 
         assertThat(events, hasSize(2));
 
-        changes = events.stream().filter(GroupItemStateChangedEvent.class::isInstance).collect(Collectors.toList());
+        changes = events.stream().filter(GroupItemStateChangedEvent.class::isInstance).toList();
         assertThat(changes, hasSize(0));
 
-        updates = events.stream().filter(GroupStateUpdatedEvent.class::isInstance).collect(Collectors.toList());
+        updates = events.stream().filter(GroupStateUpdatedEvent.class::isInstance).toList();
         assertThat(updates, hasSize(2));
 
         assertThat(groupItem.getState(), is(OnOffType.ON));
@@ -622,11 +612,10 @@ public class GroupItemOSGiTest extends JavaOSGiTest {
 
         waitForAssert(() -> assertThat(events, hasSize(2)));
 
-        List<Event> changes = events.stream().filter(GroupItemStateChangedEvent.class::isInstance)
-                .collect(Collectors.toList());
+        List<Event> changes = events.stream().filter(GroupItemStateChangedEvent.class::isInstance).toList();
         assertThat(changes, hasSize(1));
 
-        GroupItemStateChangedEvent change = (GroupItemStateChangedEvent) changes.get(0);
+        GroupItemStateChangedEvent change = (GroupItemStateChangedEvent) changes.getFirst();
         assertThat(change.getItemName(), is(groupItem.getName()));
 
         // we expect that the group should now have status "OFF"
@@ -642,10 +631,10 @@ public class GroupItemOSGiTest extends JavaOSGiTest {
 
         waitForAssert(() -> assertThat(events, hasSize(2)));
 
-        changes = events.stream().filter(GroupItemStateChangedEvent.class::isInstance).collect(Collectors.toList());
+        changes = events.stream().filter(GroupItemStateChangedEvent.class::isInstance).toList();
         assertThat(changes, hasSize(1));
 
-        change = (GroupItemStateChangedEvent) changes.get(0);
+        change = (GroupItemStateChangedEvent) changes.getFirst();
         assertThat(change.getItemName(), is(groupItem.getName()));
 
         // we expect that the group should now have status "ON"
@@ -719,7 +708,7 @@ public class GroupItemOSGiTest extends JavaOSGiTest {
         groupItem.setState(new HSBType("200,80,80"));
         groupStateAsPercent = groupItem.getStateAs(PercentType.class);
 
-        assertTrue(groupStateAsPercent instanceof PercentType);
+        assertInstanceOf(PercentType.class, groupStateAsPercent);
         assertThat(((PercentType) groupStateAsPercent).intValue(), is(80));
     }
 
@@ -736,7 +725,7 @@ public class GroupItemOSGiTest extends JavaOSGiTest {
         groupItem.setState(new PercentType(80));
         groupStateAsPercent = groupItem.getStateAs(PercentType.class);
 
-        assertTrue(groupStateAsPercent instanceof PercentType);
+        assertInstanceOf(PercentType.class, groupStateAsPercent);
         assertThat(((PercentType) groupStateAsPercent).intValue(), is(80));
     }
 
@@ -756,17 +745,16 @@ public class GroupItemOSGiTest extends JavaOSGiTest {
 
         waitForAssert(() -> assertThat(events.size(), is(2)));
 
-        List<Event> changes = events.stream().filter(GroupItemStateChangedEvent.class::isInstance)
-                .collect(Collectors.toList());
-        GroupItemStateChangedEvent change = (GroupItemStateChangedEvent) changes.get(0);
+        List<Event> changes = events.stream().filter(GroupItemStateChangedEvent.class::isInstance).toList();
+        GroupItemStateChangedEvent change = (GroupItemStateChangedEvent) changes.getFirst();
         assertThat(change.getItemName(), is(groupItem.getName()));
 
         State newEventState = change.getItemState();
-        assertTrue(newEventState instanceof PercentType);
+        assertInstanceOf(PercentType.class, newEventState);
         assertThat(((PercentType) newEventState).intValue(), is(50));
 
         State newGroupState = groupItem.getState();
-        assertTrue(newGroupState instanceof PercentType);
+        assertInstanceOf(PercentType.class, newGroupState);
         assertThat(((PercentType) newGroupState).intValue(), is(50));
 
         events.clear();
@@ -775,18 +763,18 @@ public class GroupItemOSGiTest extends JavaOSGiTest {
 
         waitForAssert(() -> assertThat(events.size(), is(2)));
 
-        changes = events.stream().filter(GroupItemStateChangedEvent.class::isInstance).collect(Collectors.toList());
+        changes = events.stream().filter(GroupItemStateChangedEvent.class::isInstance).toList();
         assertThat(changes.size(), is(1));
 
-        change = (GroupItemStateChangedEvent) changes.get(0);
+        change = (GroupItemStateChangedEvent) changes.getFirst();
         assertThat(change.getItemName(), is(groupItem.getName()));
 
         newEventState = change.getItemState();
-        assertTrue(newEventState instanceof PercentType);
+        assertInstanceOf(PercentType.class, newEventState);
         assertThat(((PercentType) newEventState).intValue(), is(30));
 
         newGroupState = groupItem.getState();
-        assertTrue(newGroupState instanceof PercentType);
+        assertInstanceOf(PercentType.class, newGroupState);
         assertThat(((PercentType) newGroupState).intValue(), is(30));
     }
 
