@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -20,7 +20,6 @@ import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 
 import java.net.URI;
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -354,8 +353,8 @@ public class ThingManagerOSGiJavaTest extends JavaOSGiTest {
         assertNotNull(channelBuilders);
         assertEquals(2, channelBuilders.size());
 
-        assertNotNull(channelBuilders.get(0));
-        validateChannel(channelBuilders.get(0).build());
+        assertNotNull(channelBuilders.getFirst());
+        validateChannel(channelBuilders.getFirst().build());
         assertNotNull(channelBuilders.get(1));
         validateChannelOverridden(channelBuilders.get(1).build());
     }
@@ -403,13 +402,13 @@ public class ThingManagerOSGiJavaTest extends JavaOSGiTest {
         // verify a missing mandatory thing config prevents it from getting initialized
         when(mockConfigDescriptionProvider.getConfigDescription(eq(configDescriptionThing), any()))
                 .thenReturn(ConfigDescriptionBuilder.create(configDescriptionThing).withParameter(parameter).build());
-        assertThingStatus(Collections.emptyMap(), Collections.emptyMap(), ThingStatus.UNINITIALIZED,
+        assertThingStatus(Map.of(), Map.of(), ThingStatus.UNINITIALIZED,
                 ThingStatusDetail.HANDLER_CONFIGURATION_PENDING);
 
         // verify a missing mandatory channel config prevents it from getting initialized
         when(mockConfigDescriptionProvider.getConfigDescription(eq(configDescriptionChannel), any()))
                 .thenReturn(ConfigDescriptionBuilder.create(configDescriptionChannel).withParameter(parameter).build());
-        assertThingStatus(Map.of(CONFIG_PARAM_NAME, "value"), Collections.emptyMap(), ThingStatus.UNINITIALIZED,
+        assertThingStatus(Map.of(CONFIG_PARAM_NAME, "value"), Map.of(), ThingStatus.UNINITIALIZED,
                 ThingStatusDetail.HANDLER_CONFIGURATION_PENDING);
 
         // verify a satisfied config does not prevent it from getting initialized anymore
@@ -435,7 +434,7 @@ public class ThingManagerOSGiJavaTest extends JavaOSGiTest {
             @Override
             public void childHandlerInitialized(ThingHandler childHandler, Thing childThing) {
                 assertDoesNotThrow(() -> childHandlerInitializedSemaphore.acquire());
-            };
+            }
         });
         registerThingHandlerFactory(THING_TYPE_UID, thing -> new BaseThingHandler(thing) {
             @Override
@@ -454,7 +453,7 @@ public class ThingManagerOSGiJavaTest extends JavaOSGiTest {
             public void thingUpdated(Thing thing) {
                 this.thing = thing;
                 assertDoesNotThrow(() -> thingUpdatedSemapthore.acquire());
-            };
+            }
         });
 
         Bridge bridge = BridgeBuilder.create(BRIDGE_TYPE_UID, BRIDGE_UID).build();
@@ -503,7 +502,7 @@ public class ThingManagerOSGiJavaTest extends JavaOSGiTest {
             @Override
             public void childHandlerInitialized(ThingHandler childHandler, Thing childThing) {
                 assertDoesNotThrow(() -> childHandlerInitializedSemaphore.acquire());
-            };
+            }
         });
 
         registerThingHandlerFactory(THING_TYPE_UID, thing -> new BaseThingHandler(thing) {
@@ -523,7 +522,7 @@ public class ThingManagerOSGiJavaTest extends JavaOSGiTest {
             public void thingUpdated(Thing thing) {
                 this.thing = thing;
                 assertDoesNotThrow(() -> thingUpdatedSemapthore.acquire());
-            };
+            }
         });
 
         Bridge bridge = BridgeBuilder.create(BRIDGE_TYPE_UID, BRIDGE_UID).build();
@@ -572,7 +571,7 @@ public class ThingManagerOSGiJavaTest extends JavaOSGiTest {
             @Override
             public void childHandlerInitialized(ThingHandler childHandler, Thing childThing) {
                 assertDoesNotThrow(() -> childHandlerInitializedSemaphore.acquire());
-            };
+            }
         });
         registerThingHandlerFactory(THING_TYPE_UID, thing -> new BaseThingHandler(thing) {
             @Override
@@ -588,7 +587,7 @@ public class ThingManagerOSGiJavaTest extends JavaOSGiTest {
             public void thingUpdated(Thing thing) {
                 this.thing = thing;
                 assertDoesNotThrow(() -> thingUpdatedSemapthore.acquire());
-            };
+            }
         });
 
         Bridge bridge = BridgeBuilder.create(BRIDGE_TYPE_UID, BRIDGE_UID).build();
@@ -1116,7 +1115,7 @@ public class ThingManagerOSGiJavaTest extends JavaOSGiTest {
         protected @Nullable ThingHandler createHandler(Thing thing) {
             return thingHandlerProducer.apply(thing);
         }
-    };
+    }
 
     private AtomicReference<ThingHandlerCallback> initializeThingHandlerCallback() throws Exception {
         AtomicReference<ThingHandlerCallback> thc = new AtomicReference<>();
